--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -25,8 +25,8 @@
     align-items: center;
 }
 .banner_img {
-    width: 250px;
-    height: 250px;
+    max-width: 250px;
+    max-height: 250px;
     border-radius: 50%;
 }
 
