--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Rubik:wght@300;400&display=swap');
+
+* {
+    font-family: 'Rubik';
+}
+
 body {
     /* background-color: #2C75FF; */
-    background-color: white;
+    background-color: #F7F7F7;
     margin:0;
 }
