--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -31,17 +31,18 @@
     border-radius: 50%;
 }
 
-.banner_name {
+.banner_name_wrapper {
     grid-area: name;
     display: grid;
     align-items: center;
     justify-content: center;
-    font-size: large;
-    font-weight: bold;
-    letter-spacing: 5px;
-    text-transform: uppercase;
+    font-size: x-large;
+    font-weight: 400;
+    letter-spacing: 4px;
     text-align: center;
-    color: black;
+}
+
+.banner_name {
     animation: animate 3s linear infinite;
 }
 @keyframes animate {
@@ -68,14 +69,14 @@
 
 
 .banner_role_wrapper .static_text {
-    font-size: 26px;
+    font-size: x-large;
     font-weight: 400;
 }
 
 .banner_role_wrapper .dynamic_text {
-    margin-left: 7.5px;
-    height: 29px;
-    line-height: 30px;
+    margin-left: 7px;
+    height: 34px;
+    line-height: 34px;
     overflow: hidden;
 }
 
@@ -87,7 +88,7 @@
 .dynamic_text li {
     color: #2666CF;
     list-style: none;
-    font-size: 26px;
+    font-size: x-large;
     font-weight: 400;
     position: relative;
     top: 0;
@@ -97,7 +98,7 @@
 @keyframes slide
 {
     100%{
-        top:-90px;
+        top:-100px;
     }
 }
 
@@ -118,7 +119,7 @@
 @keyframes typing
 {
     40%,60%{
-        left:calc(100% + 5px);
+        left:100%;
     }
     100%{
         left:0;
