--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,135 +1,132 @@
-
 .banner_container {
-    display: grid;
-    grid-template-areas:
+  display: grid;
+  grid-template-areas:
     "pic"
     "name"
     "role"
     "cv";
-    gap: 24px;
-    padding: 24px;
-    max-width: 1200px;
-    text-align: center;
+  gap: 24px;
+  padding: 6px;
+  max-width: 1200px;
+  text-align: center;
 }
 
-@media (min-width:813px) {
-    .banner_container {
-        grid-template-areas:
-        "name pic"
-        "role pic"
-        "cv pic";
-    }
+@media (min-width: 813px) {
+  .banner_container {
+    grid-template-areas:
+      "name pic"
+      "role pic"
+      "cv pic";
+  }
 }
 
 .banner_picture {
-    grid-area: pic;
-    display: grid;
-    justify-content: center;
-    align-items: center;
+  grid-area: pic;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
 .banner_img {
-    border-radius: 50%;
-    max-width: 500px;
-    max-height: 500px;
+  border-radius: 50%;
+  max-width: 250px;
+  max-height: 250px;
 }
 
-@media (max-width:813px) {
+  @media (min-width: 600px) {
     .banner_img {
-        max-width: 350px;
+      max-width: 350px;
+      max-height: 350px;
     }
-}
-
-@media (max-width:600px) {
-    .banner_img {
-        max-width: 250px;
-    }
-}
+  }
 
 .banner_name_wrapper {
-    grid-area: name;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    font-size: xxx-large;
-    font-weight: 400;
-    letter-spacing: 4px;
-    text-align: center;
+  grid-area: name;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 4px;
+  text-align: center;
 }
 
 .banner_name {
-    font-weight: 800;
-    font-size: xx-large;
-    animation: animate 3s linear infinite;
+  font-weight: 800;
+  font-size: xx-large;
+  animation: animate 3s linear infinite;
 }
 @keyframes animate {
-    100%
-    {
-        color: #1565c0;
-    }
+  100% {
+    color: #1565c0;
+  }
 }
 
 .banner_role_wrapper {
-    grid-area: role;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-size: x-large;
-    font-weight: 400;
+  grid-area: role;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: x-large;
+  font-weight: 400;
 }
 
 .banner_cv {
-    grid-area: cv;
-    display: grid;
-    justify-self: center;
-    align-self: center;
+  grid-area: cv;
+  display: grid;
+  justify-self: center;
+  align-self: center;
 }
 
 .banner_role_wrapper .banner_role_dynamic_text {
-    margin-left: 7px;
-    height: 43px;
-    line-height: 34px;
-    overflow: hidden;
+  margin-left: 7px;
+  height: 40px;
+  overflow: hidden;
+  font-variant: all-petite-caps;
 }
 
-.banner_role_dynamic_text{
-    margin:0;
-    padding:0;
+.banner_role_dynamic_text {
+  margin: 0;
+  padding: 0;
 }
 
 .banner_role_dynamic_text li {
-    color: #1565c0;
-    list-style: none;
-    font-size: x-large;
-    position: relative;
-    top: 0;
-    animation: slide 3s steps(3) infinite;
+  color: #1565c0;
+  list-style: none;
+  font-size: x-large;
+  position: relative;
+  top: 0;
+  animation: slide 3s steps(3) infinite;
 }
 
-@keyframes slide
-{
-    100%{
-        top:-128px;
+@keyframes slide {
+  100% {
+    top: -128px;
+  }
+}
+
+@media (max-width: 600px) {
+  @keyframes slide {
+    100% {
+      top: -108px;
     }
+  }
 }
 
-.banner_role_dynamic_text li span::after{
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    border-left: 3px solid black;
-    background: #fafafa;
-    left:0;
-    animation: typing 1s steps(10) infinite;
+.banner_role_dynamic_text li span::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-left: 3px solid black;
+  background: #fafafa;
+  left: 0;
+  animation: typing 1s steps(10) infinite;
 }
 
-@keyframes typing
-{
-    40%,60%{
-        left:100%;
-    }
-    100%{
-        left:0;
-    }
+@keyframes typing {
+  40%,
+  60% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
 }
-
