--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,4 +1,4 @@
-.banner_container {
+.banner {
   display: grid;
   grid-template-areas:
     "pic"
@@ -13,7 +13,7 @@
 }
 
 @media (min-width: 813px) {
-  .banner_container {
+  .banner {
     grid-template-areas:
       "name pic"
       "role pic"
@@ -21,35 +21,32 @@
   }
 }
 
-.banner_picture {
+.banner__picture {
   grid-area: pic;
   display: grid;
   justify-content: center;
   align-items: center;
 }
-.banner_img {
+.banner__picture-img {
   border-radius: 50%;
   max-width: 250px;
   max-height: 250px;
 }
 
   @media (min-width: 600px) {
-    .banner_img {
+    .banner__picture-img {
       max-width: 350px;
       max-height: 350px;
     }
   }
 
-.banner_name_wrapper {
+.banner__name {
   grid-area: name;
   display: grid;
   align-items: center;
   justify-content: center;
   letter-spacing: 4px;
   text-align: center;
-}
-
-.banner_name {
   font-weight: 800;
   font-size: xx-large;
   animation: animate 3s linear infinite;
@@ -60,7 +57,7 @@
   }
 }
 
-.banner_role_wrapper {
+.banner__role {
   grid-area: role;
   display: inline-flex;
   align-items: center;
@@ -69,26 +66,23 @@
   font-weight: 400;
 }
 
-.banner_cv {
+.banner__cv {
   grid-area: cv;
   display: grid;
   justify-self: center;
   align-self: center;
 }
 
-.banner_role_wrapper .banner_role_dynamic_text {
+.banner__role--dynamic_text {
   margin-left: 7px;
   height: 40px;
   overflow: hidden;
   font-variant: all-petite-caps;
-}
-
-.banner_role_dynamic_text {
   margin: 0;
   padding: 0;
 }
 
-.banner_role_dynamic_text li {
+.banner__role--dynamic_text--item {
   list-style: none;
   font-size: x-large;
   position: relative;
@@ -110,7 +104,7 @@
   }
 }
 
-.banner_role_dynamic_text li span::after {
+.banner__role--dynamic_text--item span::after {
   content: "";
   position: absolute;
   height: 100%;
