--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -5,11 +5,10 @@
     "name"
     "role"
     "cv";
-  gap: 24px;
   padding: 6px;
   max-width: 1200px;
   text-align: center;
-  margin: 60px auto 180px auto;
+  margin: 140px auto 208px auto;
 }
 
 @media (min-width: 813px) {
@@ -26,15 +25,16 @@
   display: grid;
   justify-content: center;
   align-items: center;
+  padding: 6px;
 }
-.banner__picture-img {
+.banner__picture--img {
   border-radius: 50%;
   max-width: 250px;
   max-height: 250px;
 }
 
   @media (min-width: 600px) {
-    .banner__picture-img {
+    .banner__picture--img {
       max-width: 350px;
       max-height: 350px;
     }
@@ -43,27 +43,31 @@
 .banner__name {
   grid-area: name;
   display: grid;
-  align-items: center;
-  justify-content: center;
   letter-spacing: 4px;
-  text-align: center;
+  font-size: x-large;
+  margin-top:24px;
+}
+
+.banner__name--item {
+  margin: 0px;
+}
+.banner__name--item-fullname {
+  margin: 12px;
   font-weight: 800;
   font-size: xx-large;
-  animation: animate 3s linear infinite;
+  animation: animate 4s linear infinite;
 }
+
 @keyframes animate {
-  100% {
-    color: #1565c0;
+  50% {
+    color: #1976D2;
   }
 }
 
 .banner__role {
   grid-area: role;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
   font-size: x-large;
-  font-weight: 400;
 }
 
 .banner__cv {
@@ -75,7 +79,7 @@
 
 .banner__role--dynamic_text {
   margin-left: 7px;
-  height: 40px;
+  height: 36px;
   overflow: hidden;
   font-variant: all-petite-caps;
   margin: 0;
@@ -84,27 +88,22 @@
 
 .banner__role--dynamic_text--item {
   list-style: none;
-  font-size: x-large;
   position: relative;
-  top: 0;
+  top:0;
   animation: slide 3s steps(3) infinite;
+}
+
+.banner__role--dynamic_text--item h4{
+  margin:0
 }
 
 @keyframes slide {
   100% {
-    top: -128px;
+    top: -108px;
   }
 }
 
-@media (max-width: 600px) {
-  @keyframes slide {
-    100% {
-      top: -108px;
-    }
-  }
-}
-
-.banner__role--dynamic_text--item span::after {
+.banner__role--dynamic_text--item h4::after {
   content: "";
   position: absolute;
   height: 100%;
