--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -8,19 +8,8 @@
   padding: 6px;
   max-width: 1200px;
   text-align: center;
-  margin: 80px auto 208px auto;
+  margin: 30px auto 208px auto;
   grid-template-columns: repeat(1, 1fr);
-}
-
-@media (min-width: 813px) {
-  .banner {
-    grid-template-areas:
-      "name pic"
-      "role pic"
-      "cv pic";
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 30px;
-  }
 }
 
 .banner__picture {
@@ -35,35 +24,23 @@
   max-height: 250px;
 }
 
-  @media (min-width: 600px) {
-    .banner__picture--img {
-      max-width: 350px;
-      max-height: 350px;
-    }
-  }
-
 .banner__name {
   grid-area: name;
   display: grid;
   letter-spacing: 4px;
-  font-size: x-large;
-  margin-top:24px;
+  font-size: 1.2rem;
+  margin-top: 24px;
 }
 
 .banner__name--item {
   margin: 0px;
 }
+
 .banner__name--item-fullname {
   margin: 12px;
   font-weight: 800;
-  font-size: xx-large;
+  font-size: 1.5rem;
   animation: animate 4s linear infinite;
-}
-
-@keyframes animate {
-  50% {
-    color: #1976D2;
-  }
 }
 
 .banner__cv {
@@ -71,6 +48,20 @@
   display: grid;
   justify-self: center;
   align-self: center;
+  font-size: 0.9rem;
+}
+
+.banner__role-container {
+  font-size: 1rem;
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+}
+
+.short-right-border {
+  position: absolute;
+  right: -10px; /* Adjust spacing to align with text */
+  height: auto;
 }
 
 .banner__role {
@@ -78,21 +69,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-}
-
-.banner__role-container {
   position: relative;
-  display: inline-block;
-  font-size: 2rem;
-  overflow: hidden;
-  white-space: nowrap;
-  animation: typing 1s steps(18);
-}
-
-.short-right-border {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
 }
 
 .short-right-border::after {
@@ -104,20 +81,63 @@
   animation: typing-blink 0.8s steps(1) infinite;
 }
 
+@media (min-width: 813px) {
+  .banner {
+    grid-template-areas:
+      "name pic"
+      "role pic"
+      "cv pic";
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    margin: 90px auto 208px auto;
+  }
+
+  .banner__picture--img {
+    max-width: 350px;
+    max-height: 350px;
+  }
+
+  .banner__name--item {
+    font-size: 2rem;
+  }
+
+  .banner__name--item-fullname {
+    font-size: 3rem;
+  }
+
+  .banner__role-container {
+    font-size: 2rem;
+  }
+
+  .banner__cv {
+    font-size: 1.2rem;
+  }
+}
+
+@keyframes animate {
+  50% {
+    color: #1976D2;
+  }
+}
+
 @keyframes typing {
   0% {
     width: 0;
   }
+
   100% {
     width: 14ch;
   }
 }
 
 @keyframes typing-blink {
-  0%, 50% {
+  0%,
+  50% {
     opacity: 1;
   }
-  51%, 100% {
+
+  51%,
+  100% {
     opacity: 0;
   }
 }
