--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -28,7 +28,7 @@
   grid-area: name;
   display: grid;
   letter-spacing: 4px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-top: 24px;
 }
 
@@ -39,7 +39,7 @@
 .banner__name--item-fullname {
   margin: 12px;
   font-weight: 800;
-  font-size: 1.5rem;
+  font-size: 2rem;
   animation: animate 4s linear infinite;
 }
 
@@ -47,17 +47,16 @@
   grid-area: cv;
   display: grid;
   justify-self: center;
-  align-self: center;
-  font-size: 0.9rem;
+  font-size: 1rem;
+  background: linear-gradient(90deg, #1976d2, #42a5f5);
+  border-radius: 8px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.banner__role-container {
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-  white-space: nowrap;
-  animation: typing 1s steps(20) forwards;
-  width: fit-content;
+.banner__cv:hover {
+  transform: scale(1.1);
+  background: linear-gradient(90deg, #42a5f5, #1976d2);
 }
 
 .short-right-border {
@@ -66,7 +65,6 @@
   height: 1em;
   vertical-align: middle;
   position: relative;
-  top: 0.1em; /* Adjusted to align perfectly with the text */
 }
 
 .banner__role {
@@ -77,6 +75,16 @@
   position: relative;
 }
 
+.banner__role-container {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typing 1s steps(20) forwards;
+  width: fit-content;
+  font-size: 1rem;
+}
+
 .short-right-border::after {
   content: '';
   display: inline-block;
@@ -84,10 +92,8 @@
   height: 100%;
   background-color: white;
   animation: typing-blink 0.8s steps(1) infinite;
-  font-size: 1rem;
 }
 
-/* Desktop styles */
 @media (min-width: 813px) {
   .banner {
     grid-template-areas:
@@ -120,8 +126,8 @@
     font-size: 1.2rem;
   }
 
-  .short-right-border::after {
-    height: 2rem; /* Larger font size for desktop */
+  .short-right-border {
+    height: 2rem;
   }
 }
 
