--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -8,7 +8,7 @@
   padding: 6px;
   max-width: 1200px;
   text-align: center;
-  margin: 30px auto 208px auto;
+  margin: 24px auto;
   grid-template-columns: repeat(1, 1fr);
 }
 
@@ -20,8 +20,8 @@
 
 .banner__picture--img {
   border-radius: 50%;
-  max-width: 250px;
-  max-height: 250px;
+  max-width: 225px;
+  max-height: 225px;
 }
 
 .banner__name {
@@ -50,7 +50,6 @@
   font-size: 1rem;
   background: linear-gradient(90deg, #1976d2, #42a5f5);
   border-radius: 8px;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -102,7 +101,7 @@
       "cv pic";
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
-    margin: 120px auto 208px auto;
+    margin: auto,
   }
 
   .banner__picture--img {
